--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.8",
+    "gsap": "^3.11.1",
     "next": "12.3.0",
     "postcss": "^8.4.16",
     "react": "18.2.0",
